--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     alias(libs.plugins.android.application)
+    id 'com.google.dagger.hilt.android'
 }
+
+
 
 android {
     namespace 'com.arsoft.themovieapppaging'
@@ -29,6 +32,35 @@ android {
 }
 
 dependencies {
+
+    // Retrofit
+    implementation("com.squareup.retrofit2:retrofit:3.0.0")
+    implementation("com.squareup.retrofit2:converter-gson:3.0.0")
+
+    // Paging Library
+    def paging_version = "3.3.6"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    // optional - RxJava3 support
+    implementation "androidx.paging:paging-rxjava3:$paging_version"
+
+    // Hilt Dagger
+    implementation 'com.google.dagger:hilt-android:2.56.2'
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.56.2'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
+    // Android lifecycle
+    def lifecycle_version = "2.9.0"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    // Hilt dagger
+    implementation "com.google.dagger:hilt-android:2.56.2"
+
+
 
     implementation libs.appcompat
     implementation libs.material
