--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,6 @@ plugins {
     id 'com.google.dagger.hilt.android'
 }
 
-
-
 android {
     namespace 'com.arsoft.themovieapppaging'
     compileSdk 35
@@ -28,6 +26,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
+    }
+    buildFeatures{
+        dataBinding true
     }
 }
 
